[package]
name = "dds-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
image_dds = { version = "0.5.1", default-features = false, features = [
    "image",
    "ddsfile",
] }
